--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doctor AI: The Intelligent Pre-Assessment Agent</title>
+    <title>Doctor AI: The Intelligent Patient Assesment Agent</title>
     <meta name="description" content="Automate clinical documentation with Doctor AI, the intelligent pre-assessment agent. Seamlessly convert patient chat (text or voice via Telegram) into structured, EMR-ready reports to simplify physician workflow and save 10-15 minutes per consultation.">
     <meta name="keywords" content="AI healthcare documentation, EMR ready report, patient pre-assessment, clinical workflow automation, AI physician assistant, medical AI agent, zero-click documentation, medical scribing AI, healthcare efficiency, doctor AI, Synapse intelligent context engine">
     <meta name="author" content="Sehal Hussain">
 
-    <meta property="og:title" content="Doctor AI: Intelligent Pre-Assessment Agent">
+    <meta property="og:title" content="Doctor AI: Intelligent Patient Pre-Assessment Agent">
     <meta property="og:description" content="Automate clinical documentation with Doctor AI. Convert patient chat into structured, EMR-ready reports to simplify physician workflow and boost efficiency.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="YOUR_LIVE_URL_HERE">
@@ -119,7 +119,7 @@
 <body class="antialiased">
 
     <!-- Header & Hero Section (Always visible) -->
-    <header class="pt-32 pb-24 border-b border-gray-900">
+    <header class="pt-32 pb-24">
         <div class="container mx-auto px-4 text-center max-w-4xl">
             <h1 class="text-4xl sm:text-6xl font-extrabold mb-5 leading-tight">
                 Doctor AI: The Intelligent <span class="gradient-text">Pre-Assessment Agent</span>
@@ -315,7 +315,7 @@
         </section>
 
         <!-- Benefits Section -->
-        <section id="benefits" class="py-24 border-t border-b border-gray-900">
+        <section id="benefits" class="py-24">
             <div class="container mx-auto px-4 max-w-6xl grid grid-cols-1 lg:grid-cols-2 gap-10">
 
                 <!-- Patient Benefits - Glass Card -->
@@ -346,13 +346,13 @@
                         <li class="flex items-start">
                             <span class="text-lg mr-3 text-cyan-400">◆</span>
                             <div>
-                                <span class="font-semibold text-gray-200">Instant Context:</span> Eliminate 10-15 minutes of repetitive history-taking per consult with a structured report available *before* the patient enters the room.
+                                <span class="font-semibold text-gray-200">Instant Context:</span> Eliminate 10-15 minutes of repetitive history-taking per consult with a structured report available <b>before</b> the patient enters the room.
                             </div>
                         </li>
                         <li class="flex items-start">
                             <span class="text-lg mr-3 text-cyan-400">◆</span>
                             <div>
-                                <span class="font-semibold text-gray-200">Full Physician Control:</span> Every report is a living EMR document. The doctor has complete power to **edit, add, or subtract** any detail needed before final sign-off.
+                                <span class="font-semibold text-gray-200">Full Physician Control:</span> Every report is a living EMR document. The doctor has complete power to <b>edit, add, or subtract</b> any detail needed before final sign-off.
                             </div>
                         </li>
                     </ul>
@@ -390,7 +390,7 @@
         </section>
 
         <!-- Footer -->
-        <footer class="py-8 mt-12 text-center text-gray-600 text-xs border-t border-gray-900">
+        <footer class="py-8 mt-12 text-center text-gray-600 text-xs">
             <p> Doctor AI: The Intelligent Pre-Assessment Agent | © 2025 Sehal Hussain. All rights reserved.</p>
         </footer>
 
