--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         const MAX_RETRIES = 5;
 
         // Special message to indicate chat initiation (should not be rendered in chat history)
-        const AI_INITIATION_TOKEN = '__AI_INITIATE_CHAT__';
+        const AI_INITIATION_TOKEN = 'Hello Doctor';
         // CRITICAL: This is the phrase your external AI must return in its summary response to trigger the button.
         const AI_TRIGGER_PHRASE = "based on the reported symptoms"; 
 
@@ -761,3 +761,4 @@
     </script>
 </body>
 </html>
+
