--- a/index.html
+++ b/index.html
@@ -4,17 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor AI: The Intelligent Patient Assesment Agent</title>
+    <!-- SEO OPTIMIZATION: Meta Description (UPDATED) -->
     <meta name="description" content="Automate clinical documentation with Doctor AI, the intelligent pre-assessment agent. Seamlessly convert patient chat (text or voice via Telegram) into structured, EMR-ready reports to simplify physician workflow and save 10-15 minutes per consultation.">
+    <!-- SEO OPTIMIZATION: Meta Keywords (UPDATED) -->
     <meta name="keywords" content="AI healthcare documentation, EMR ready report, patient pre-assessment, clinical workflow automation, AI physician assistant, medical AI agent, zero-click documentation, medical scribing AI, healthcare efficiency, doctor AI, Synapse intelligent context engine">
+    <!-- SEO OPTIMIZATION: Author -->
     <meta name="author" content="Sehal Hussain">
-
+    
+    <!-- 
+        --- START: SOCIAL SHARING META TAGS (OPEN GRAPH & TWITTER) ---
+        The 'og:image' and 'twitter:image' now point to your specified path: /images/social_share_image.jpg
+        Make sure the file exists at this location.
+    -->
     <meta property="og:title" content="Doctor AI: Intelligent Patient Pre-Assessment Agent">
     <meta property="og:description" content="Automate clinical documentation with Doctor AI. Convert patient chat into structured, EMR-ready reports to simplify physician workflow and boost efficiency.">
+    <!-- CRITICAL: Path to your social sharing image -->
+    <meta property="og:image" content="/images/Share_image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:type" content="website">
     <meta property="og:url" content="YOUR_LIVE_URL_HERE">
+    
+    <!-- Twitter Specific Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Doctor AI: Intelligent EMR Pre-Assessment">
     <meta name="twitter:description" content="Automate clinical documentation with Doctor AI, the intelligent agent that creates EMR-ready reports from patient conversations. Zero-Touch Workflow.">
+    <meta name="twitter:image" content="/images/Share_image.png">
+    <!-- --- END: SOCIAL SHARING META TAGS --- -->
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -761,4 +777,5 @@
     </script>
 </body>
 </html>
+
 
