--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta name="twitter:description" content="Automate clinical documentation with Doctor AI, the intelligent agent that creates EMR-ready reports from patient conversations. Zero-Touch Workflow.">
     <meta name="twitter:image" content="https://sehalhussain.github.io/doctorai/images/Share_image.png">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLMDJz9TT7SBlH3p4WpGmf9xQz6X7qT7X/G4J5Mv+Y+c/e4n3/d9F7/gC2/9Vb4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- --- END: SOCIAL SHARING META TAGS --- -->
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -957,6 +958,7 @@
     </script>
 </body>
 </html>
+
 
 
 
